// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`title component should render with custom summaryHeading color 1`] = `
.c0 {
  color: #717285;
  font-family: Avenir Medium,'Avenir Next','Segoe UI', sans-serif;
  font-size: 16px;
  font-weight: bold;
  -webkit-letter-spacing: -0.18px;
  -moz-letter-spacing: -0.18px;
  -ms-letter-spacing: -0.18px;
  letter-spacing: -0.18px;
  line-height: 24px;
}

<p
  className="c0"
  color="summaryHeading"
>
  Lorem ipsum
</p>
`;

exports[`title component should render with default css properties 1`] = `
.c0 {
  color: #7350FF;
  font-family: Avenir Medium,'Avenir Next','Segoe UI', sans-serif;
  font-size: 16px;
  font-weight: bold;
  -webkit-letter-spacing: -0.18px;
  -moz-letter-spacing: -0.18px;
  -ms-letter-spacing: -0.18px;
  letter-spacing: -0.18px;
  line-height: 24px;
}

<p
  className="c0"
>
  Lorem ipsum
</p>
`;
